fixed search bar text alignment

--- a/src/app/pages/Transactions/transactions/balance-summary/balance-summary.component.css
+++ b/src/app/pages/Transactions/transactions/balance-summary/balance-summary.component.css
@@ -29,7 +29,7 @@
   align-items: center;
   background-color: none;
   height: 40px;
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
 .input-group mat-icon {
